[package]
authors = ["Delirious Penguin <deliriouspenguin@protonmail.com"]
edition = "2018"
name = "matchmaker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
rand = {version = "0.7.3"}
serde = {version = "1.0.115", features = ["derive"]}
