[package]
authors = ["Delirious Penguin <deliriouspenguin@protonmail.com"]
categories = ["algorithms"]
description = "Rust library to fairly match students to categories."
edition = "2018"
keywords = ["math", "matching", "da-stb"]
name = "matchmaker"
readme = "README.md"
repository = "https://github.com/deliriouspenguin/matchmaker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
rand = {version = "0.7.3"}
serde = {version = "1.0.115", features = ["derive"]}
